--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="menu mt-2 ml-auto">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li class=""><a href="about.html">About Us</a></li>
-				<li class=""><a href="services.html">Services</a></li>
+				<li class=""><a href="services.html">Our Services</a></li>
 				<li class=""><a href="gallery.html">Gallery</a></li>
 				<!-- <li class=""><a href="blog.html">Blog</a></li> -->
 				<li class=""><a href="contact.html">Contact Us</a></li>
@@ -354,7 +354,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
 				<h4 class="mb-sm-4 mb-3"><span class="fa fa-stethoscope"></span> Omolola Hospital</h4>
 				<p class="mb-3">Onec Consequat sapien ut cursus rhoncus. Nullam dui mi, vulputate ac metus semper quis luctus sed.</p>
-				<h5>Trusted by <span>500+ People</span> </h5>
+				<h5>Trusted by <span>5000+ People</span> </h5>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
 				<h4 class="mb-sm-4 mb-3">Address Info</h4>
