--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dental Health Medical Category Flat Bootstrap Responsive Website Template | About :: W3layouts</title>
+<title>Omolola Hospital</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="menu mt-2 ml-auto">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li class=""><a href="about.html">About Us</a></li>
-				<li class=""><a href="services.html">Services</a></li>
+				<li class=""><a href="services.html">Our Services</a></li>
 				<li class=""><a href="gallery.html">Gallery</a></li>
 				<!-- <li class=""><a href="blog.html">Blog</a></li> -->
 				<li class=""><a href="contact.html">Contact Us</a></li>
@@ -304,25 +304,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container py-sm-3">
 		<div class="row footer-grids">
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
-				<h4 class="mb-sm-4 mb-3"><span class="fa fa-stethoscope"></span> Dental Health</h4>
+				<h4 class="mb-sm-4 mb-3"><span class="fa fa-stethoscope"></span> Omolola Hospital</h4>
 				<p class="mb-3">Onec Consequat sapien ut cursus rhoncus. Nullam dui mi, vulputate ac metus semper quis luctus sed.</p>
-				<h5>Trusted by <span>500+ People</span> </h5>
+				<h5>Trusted by <span>5000+ People</span> </h5>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
 				<h4 class="mb-sm-4 mb-3">Address Info</h4>
-				<p><span class="fa mr-2 fa-map-marker"></span>64d canal street TT 3356 <span>Newyork, NY.</span></p>
-				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> +1(12) 123 456 789 </p>
-				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:info@example.com">info@example.com</a></p>
+				<p><span class="fa mr-2 fa-map-marker"></span>Opposite Government Secondary School (G.S.S) Along Zango-Kulende Road <span>Ilorin, Kwara.</span></p>
+				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> +234903399607 </p>
+				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:info@example.com">omololahospital@gmail.com</a></p>
 			</div>
 			<div class="col-lg-2 col-sm-6 mb-sm-0 mb-4">
 				<h4 class="mb-sm-4 mb-3">Quick Links</h4>
 				<ul>
-					<li><a href="#">Terms & Conditions</a></li>
-					<li class="my-2"><a href="#">Support Helpline</a></li>
-					<li><a href="#">Healthy Tips</a></li>
-					<li class="mt-2"><a href="#">Privacy Ploicy</a></li>
+					<li><a href="#">Home <i class="fa fa-angle-double-right"></i></a></li>
+					<li class="my-2"><a href="#">About <i class="fa fa-angle-double-right"></i></a></li>
+					<li><a href="#">Services <i class="fa fa-angle-double-right"></i></a></li>
+					<li class="mt-2"><a href="#">Contact Us <i class="fa fa-angle-double-right"></i></a></li>
 				</ul>
 			</div>
+			
 		</div>
 	</div>
 </footer>
