deleted single page and made some edits

--- a/about.html
+++ b/about.html
@@ -330,10 +330,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //footer -->
 
 <!-- copyright -->
+
 <div class="copyright">
 	<div class="container py-4">
 		<div class=" text-center">
-			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by HCC Med & Pharm</p>
+			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by HCC Med & Pharm Team, 2019.</p>
 		</div>
 	</div>
 </div>
