--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dental Health Medical Category Flat Bootstrap Responsive Website Template | Gallery :: W3layouts</title>
+<title>Omolola Hospital</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -46,21 +46,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="d-lg-flex header-w3_pvt">
 					<li class="mr-lg-3">
 						<span class="fa fa-envelope-open"></span>
-						<a href="mailto:info@example.com" class="">info@example.com</a>
+						<a href="mailto:omololahospital@gmail.com" class="">omololahospital@gmail.com</a>
 					</li>
 					<li>
 						<span class="fa fa-phone"></span>
-						<p class="d-inline">Call Us +12 345 678</p>
+						<p class="d-inline">Call Us +2349033999607</p>
 					</li>
 				</ul>
 			</div>
 			<div class="col-sm-6 header-right-w3_pvt">
 				<ul class="d-lg-flex header-w3_pvt justify-content-lg-end">
 					<li class="mr-lg-3">
-						<span class=""><span class="fa fa-clock-o"></span>Mon - Fri : 8:30am to 9:30pm</span>
-					</li>
-					<li class="">
-						<span class=""><span class="fa fa-clock-o"></span>Sat & Sun : 9:00am to 6:00pm</span>
+						<span class=""><span class="fa fa-clock-o"></span>We are open 24/7</span>
 					</li>
 				</ul>
 			</div>
@@ -273,10 +270,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //footer -->
 
 <!-- copyright -->
+
 <div class="copyright">
 	<div class="container py-4">
 		<div class=" text-center">
-			<p>© 2019 Dental Health. All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
+			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by HCC Med & Pharm Team, 2019.</p>
 		</div>
 	</div>
 </div>
