--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dental Health Medical Category Flat Bootstrap Responsive Website Template | Home :: W3layouts</title>
+<title>Omolola Hospital</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -381,7 +381,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="copyright">
 	<div class="container py-4">
 		<div class=" text-center">
-			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by Med & Pharm 2019</p>
+			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by HCC Med & Pharm Team, 2019.</p>
 		</div>
 	</div>
 </div>
