--- a/blog.html
+++ b/blog.html
@@ -216,10 +216,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //footer -->
 
 <!-- copyright -->
+
 <div class="copyright">
 	<div class="container py-4">
 		<div class=" text-center">
-			<p>© 2019 Dental Health. All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
+			<p>© 2019 Omolola Hospital. All Rights Reserved | Design by HCC Med & Pharm Team, 2019.</p>
 		</div>
 	</div>
 </div>
