--- a/gallery.html
+++ b/gallery.html
@@ -219,54 +219,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container py-sm-3">
 		<div class="row footer-grids">
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
-				<h4 class="mb-sm-4 mb-3"><span class="fa fa-stethoscope"></span> Dental Health</h4>
+				<h4 class="mb-sm-4 mb-3"><span class="fa fa-stethoscope"></span> Omolola Hospital</h4>
 				<p class="mb-3">Onec Consequat sapien ut cursus rhoncus. Nullam dui mi, vulputate ac metus semper quis luctus sed.</p>
-				<h5>Trusted by <span>500+ People</span> </h5>
+				<h5>Trusted by <span>5000+ People</span> </h5>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
 				<h4 class="mb-sm-4 mb-3">Address Info</h4>
-				<p><span class="fa mr-2 fa-map-marker"></span>64d canal street TT 3356 <span>Newyork, NY.</span></p>
-				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> +1(12) 123 456 789 </p>
-				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:info@example.com">info@example.com</a></p>
+				<p><span class="fa mr-2 fa-map-marker"></span>Opposite Government Secondary School (G.S.S) Along Zango-Kulende Road <span>Ilorin, Kwara.</span></p>
+				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> +234903399607 </p>
+				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:info@example.com">omololahospital@gmail.com</a></p>
 			</div>
 			<div class="col-lg-2 col-sm-6 mb-sm-0 mb-4">
 				<h4 class="mb-sm-4 mb-3">Quick Links</h4>
 				<ul>
-					<li><a href="#">Terms & Conditions</a></li>
-					<li class="my-2"><a href="#">Support Helpline</a></li>
-					<li><a href="#">Healthy Tips</a></li>
-					<li class="mt-2"><a href="#">Privacy Ploicy</a></li>
+					<li><a href="#">Home <i class="fa fa-angle-double-right"></i></a></li>
+					<li class="my-2"><a href="#">About <i class="fa fa-angle-double-right"></i></a></li>
+					<li><a href="#">Services <i class="fa fa-angle-double-right"></i></a></li>
+					<li class="mt-2"><a href="#">Contact Us <i class="fa fa-angle-double-right"></i></a></li>
 				</ul>
 			</div>
-			<div class="col-lg-4 col-sm-6">
-				<h4 class="mb-sm-4 mb-3">Subscribe Us</h4>
-				<p class="mb-3">Subscribe to our newsletter</p>
-				<form action="#" method="post" class="d-flex">
-					<input type="email" id="email" name="EMAIL" placeholder="Enter your email here" required="">
-					<button type="submit" class="btn">Subscribe</button>
-				</form>
-				<div class="icon-social mt-3">
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-facebook"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-twitter"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-dribbble"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-pinterest"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-google-plus"></span>
-					</a>
-
-				</div>
-			</div>
+			
 		</div>
 	</div>
 </footer>
+
 <!-- //footer -->
 
 <!-- copyright -->
